Blackpurl/src/objects/Business_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Business_City__c</fullName>
        <label>Business City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Business Profiles</relationshipLabel>
        <relationshipName>Business_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Email__c</fullName>
        <label>Business Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Postal_Code__c</fullName>
        <label>Business Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Business Profiles</relationshipLabel>
        <relationshipName>Business_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Street_Address1__c</fullName>
        <label>Business Street Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Street_Address2__c</fullName>
        <label>Business Street Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name_Optional__c</fullName>
        <label>Company Name Optional</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice_Warranty_Text__c</fullName>
        <label>Customer Invoice Warranty Text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Documents_Warranty_Text__c</fullName>
        <label>Deal Documents Warranty Text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Formatted_Business_Number__c</fullName>
        <formula>IF(Business_Phone__c != null, 
IF( Business_Country__c != null , 
IF( Business_Country__r.Name__c  == &apos;Australia&apos;, 
CASE( LEN(Business_Phone__c) , 
8 , MID(Business_Phone__c, 0, 4) + &quot; &quot; +MID(Business_Phone__c, 5, 4) , 
10 , IF(BEGINS(Business_Phone__c, &apos;04&apos;) || BEGINS(Business_Phone__c, &apos;05&apos;) , 
MID(Business_Phone__c, 0, 4) + &quot; &quot; +MID(Business_Phone__c, 5, 3)+ &quot; &quot; +MID(Business_Phone__c, 8, 3), 
MID(Business_Phone__c, 0, 2) + &quot; &quot; +MID(Business_Phone__c, 3, 4)+ &quot; &quot; +MID(Business_Phone__c, 7, 4)) 
, Business_Phone__c ), 


CASE( LEN(Business_Phone__c) , 10, &quot;(&quot; + MID(Business_Phone__c, 0, 3) + &quot;) &quot; +MID(Business_Phone__c, 4, 3) 
+ &quot;-&quot; +MID(Business_Phone__c, 7, 4) , Business_Phone__c)) 
, 
CASE( LEN(Business_Phone__c) , 8 , MID(Business_Phone__c, 0, 4) + &quot; &quot; +MID(Business_Phone__c, 4, 4) , 
10, &quot;(&quot; + MID(Business_Phone__c, 0, 3) + &quot;) &quot; +MID(Business_Phone__c, 4, 3) 
+ &quot;-&quot; +MID(Business_Phone__c, 7, 4) , Business_Phone__c)), 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Business Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Signature_Line_for_Customer_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Signature Line for Customer Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Signature_Line_for_Deal_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Signature Line for Deal Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Signature_Line_for_Order_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Signature Line for Order Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Signature_Line_for_Sales_Receipt__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is_Signature Line for Sales Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Signature_Line_for_Service_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Signature Line for Service Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Deposit_Warranty_Text__c</fullName>
        <label>Order Deposit Warranty Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Part_Label_Template__c</fullName>
        <description>DYMO SDK supported Label template Part having XML data</description>
        <label>Part Label Template</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Receipt_Warranty_Text__c</fullName>
        <label>Sales Receipt Warranty Text</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Same_As_Business_Address__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Same As Business Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Job_Warranty_Text__c</fullName>
        <label>Service Job Warranty Text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Business Profiles (Shipping Country)</relationshipLabel>
        <relationshipName>Business_Profiles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Postal_Code__c</fullName>
        <label>Shipping Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Business Profiles (Shipping State)</relationshipLabel>
        <relationshipName>Business_Profiles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_Address1__c</fullName>
        <label>Shipping Street Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_Address2__c</fullName>
        <label>Shipping Street Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Business Profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BPN-{000000}</displayFormat>
        <label>Business Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>